--- a/gmap_traffic_api/traffic_color_eda.ipynb
+++ b/gmap_traffic_api/traffic_color_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,286 +13,56 @@
     "import traffic_color\n",
     "import importlib\n",
     "importlib.reload(traffic_color)\n",
-    "from traffic_color import get_df_speed, get_df_coord, get_traffic_color, get_df_color"
+    "from traffic_color import get_df_speed, get_df_coord, get_traffic_color, get_df_color, get_df_traffic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\code\\its\\gmap_traffic_api\\traffic_color.py:23: FutureWarning: 'S' is deprecated and will be removed in a future version, please use 's' instead.\n",
-      "  df_speed['datetime'] = df_speed['datetime'].dt.floor('S')\n"
+      "df_speed = (288, 18)\n",
+      "df_coord = (252, 7)\n",
+      "df_color = (252, 9)\n",
+      "df_traffic = (288, 22)\n"
      ]
     }
    ],
    "source": [
+    "# Get result of Distance Matrix API (speed in traffic)\n",
     "df_speed = get_df_speed()\n",
-    "df_coord = get_df_coord()\n",
-    "df_color = get_df_color(df_coord)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(288, 18)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_speed.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(288, 22)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_traffic = df_speed.merge(df_color[['lat', 'lng', 'datetime', 'color']].rename(columns={'datetime': 'datetime_color'}), how='left', on=['lat', 'lng'])\n",
-    "df_traffic['datetime_delta'] = (df_traffic['datetime'] - df_traffic['datetime_color']).dt.total_seconds().abs()\n",
-    "df_traffic['rank'] = df_traffic.groupby(['lat', 'lng', 'datetime'])['datetime_delta'].rank(method='min')\n",
     "\n",
-    "datetime_delta_threshold = 10 * 60\n",
-    "df_traffic = df_traffic[(df_traffic['rank']==1) & (df_traffic['datetime_delta']<=datetime_delta_threshold)]\n",
-    "df_traffic.shape"
+    "# Get result of Traffic Layer API (color in traffic)\n",
+    "df_coord = get_df_coord()\n",
+    "df_color = get_df_color(df_coord)\n",
+    "\n",
+    "# Merge two above results\n",
+    "df_traffic = get_df_traffic(df_speed, df_color)\n",
+    "\n",
+    "print(f'df_speed = {df_speed.shape}')\n",
+    "print(f'df_coord = {df_coord.shape}')\n",
+    "print(f'df_color = {df_color.shape}')\n",
+    "print(f'df_traffic = {df_traffic.shape}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the custom order for the 'color' column\n",
-    "color_order = ['green', 'yellow', 'red', 'darkred', 'blue']  # replace with your desired order\n",
+    "color_order = ['green', 'yellow', 'red', 'darkred']\n",
     "\n",
     "# Convert the 'color' column to a categorical type with the custom order\n",
-    "df_traffic['color'] = pd.Categorical(df_traffic['color'], categories=color_order, ordered=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_traffic['color'] = pd.Categorical(df_traffic['color'], categories=color_order, ordered=True)\n",
+    "\n",
+    "# Calculate the percentage of speed in traffic compared to normal speed\n",
     "df_traffic['pct_speed_traffic'] = df_traffic['speed_in_traffic']/df_traffic['speed']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['district', 'type', 'street', 'origin_x', 'origin_y', 'destination_x',\n",
-       "       'destination_y', 'link', 'destination_addresses', 'origin_addresses',\n",
-       "       'distance', 'duration', 'duration_in_traffic', 'datetime', 'speed',\n",
-       "       'speed_in_traffic', 'lat', 'lng', 'datetime_color', 'color',\n",
-       "       'datetime_delta', 'rank', 'pct_speed_traffic'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_traffic.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>district</th>\n",
-       "      <th>type</th>\n",
-       "      <th>street</th>\n",
-       "      <th>origin_x</th>\n",
-       "      <th>origin_y</th>\n",
-       "      <th>destination_x</th>\n",
-       "      <th>destination_y</th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>duration_in_traffic</th>\n",
-       "      <th>speed</th>\n",
-       "      <th>speed_in_traffic</th>\n",
-       "      <th>color</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Cầu Giấy</td>\n",
-       "      <td>cao tốc</td>\n",
-       "      <td>Phạm Hùng</td>\n",
-       "      <td>21.033092</td>\n",
-       "      <td>105.779931</td>\n",
-       "      <td>21.031355</td>\n",
-       "      <td>105.779632</td>\n",
-       "      <td>2024-08-29 15:08:28</td>\n",
-       "      <td>196</td>\n",
-       "      <td>15</td>\n",
-       "      <td>16</td>\n",
-       "      <td>47.040000</td>\n",
-       "      <td>44.100000</td>\n",
-       "      <td>green</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Cầu Giấy</td>\n",
-       "      <td>cao tốc</td>\n",
-       "      <td>Phạm Hùng</td>\n",
-       "      <td>21.031340</td>\n",
-       "      <td>105.779766</td>\n",
-       "      <td>21.033084</td>\n",
-       "      <td>105.780054</td>\n",
-       "      <td>2024-08-29 15:08:29</td>\n",
-       "      <td>196</td>\n",
-       "      <td>17</td>\n",
-       "      <td>15</td>\n",
-       "      <td>41.505882</td>\n",
-       "      <td>47.040000</td>\n",
-       "      <td>yellow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Cầu Giấy</td>\n",
-       "      <td>vành đai</td>\n",
-       "      <td>Phạm Hùng</td>\n",
-       "      <td>21.033131</td>\n",
-       "      <td>105.779778</td>\n",
-       "      <td>21.031393</td>\n",
-       "      <td>105.779500</td>\n",
-       "      <td>2024-08-29 15:08:29</td>\n",
-       "      <td>195</td>\n",
-       "      <td>23</td>\n",
-       "      <td>22</td>\n",
-       "      <td>30.521739</td>\n",
-       "      <td>31.909091</td>\n",
-       "      <td>green</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Cầu Giấy</td>\n",
-       "      <td>vành đai</td>\n",
-       "      <td>Phạm Hùng</td>\n",
-       "      <td>21.031293</td>\n",
-       "      <td>105.779872</td>\n",
-       "      <td>21.033083</td>\n",
-       "      <td>105.780207</td>\n",
-       "      <td>2024-08-29 15:08:29</td>\n",
-       "      <td>202</td>\n",
-       "      <td>26</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27.969231</td>\n",
-       "      <td>26.933333</td>\n",
-       "      <td>yellow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Cầu Giấy</td>\n",
-       "      <td>đường chính</td>\n",
-       "      <td>Cầu Giấy</td>\n",
-       "      <td>21.035754</td>\n",
-       "      <td>105.791546</td>\n",
-       "      <td>21.035170</td>\n",
-       "      <td>105.793333</td>\n",
-       "      <td>2024-08-29 15:08:29</td>\n",
-       "      <td>197</td>\n",
-       "      <td>49</td>\n",
-       "      <td>55</td>\n",
-       "      <td>14.473469</td>\n",
-       "      <td>12.894545</td>\n",
-       "      <td>green</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    district         type     street   origin_x    origin_y  destination_x  \\\n",
-       "0   Cầu Giấy      cao tốc  Phạm Hùng  21.033092  105.779931      21.031355   \n",
-       "7   Cầu Giấy      cao tốc  Phạm Hùng  21.031340  105.779766      21.033084   \n",
-       "14  Cầu Giấy     vành đai  Phạm Hùng  21.033131  105.779778      21.031393   \n",
-       "21  Cầu Giấy     vành đai  Phạm Hùng  21.031293  105.779872      21.033083   \n",
-       "28  Cầu Giấy  đường chính   Cầu Giấy  21.035754  105.791546      21.035170   \n",
-       "\n",
-       "    destination_y            datetime  distance  duration  \\\n",
-       "0      105.779632 2024-08-29 15:08:28       196        15   \n",
-       "7      105.780054 2024-08-29 15:08:29       196        17   \n",
-       "14     105.779500 2024-08-29 15:08:29       195        23   \n",
-       "21     105.780207 2024-08-29 15:08:29       202        26   \n",
-       "28     105.793333 2024-08-29 15:08:29       197        49   \n",
-       "\n",
-       "    duration_in_traffic      speed  speed_in_traffic   color  \n",
-       "0                    16  47.040000         44.100000   green  \n",
-       "7                    15  41.505882         47.040000  yellow  \n",
-       "14                   22  30.521739         31.909091   green  \n",
-       "21                   27  27.969231         26.933333  yellow  \n",
-       "28                   55  14.473469         12.894545   green  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_traffic[['district', 'type', 'street', 'origin_x', 'origin_y', 'destination_x',\n",
-    "       'destination_y', 'datetime', 'distance', 'duration', 'duration_in_traffic', 'speed',\n",
-    "       'speed_in_traffic', 'color']].head()"
    ]
   },
   {
