--- a/traffic_map/traffic_map_plot.ipynb
+++ b/traffic_map/traffic_map_plot.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "9  329.743240     [nan]  blue  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,6 +210,32 @@
     "output_path = f'{current_path}/../db/output_{dt}.csv'\n",
     "df_street_color = pd.read_csv(output_path)\n",
     "df_street_color.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "color\n",
+       "blue       7127\n",
+       "green      5590\n",
+       "yellow      961\n",
+       "darkred     786\n",
+       "red         514\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_street_color['color'].value_counts()"
    ]
   },
   {
