--- a/traffic_map/traffic_color_eda.ipynb
+++ b/traffic_map/traffic_color_eda.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# Get result of Traffic Layer API (color in traffic)\n",
     "df_coord = get_df_coord(f'{api_result_path}/traffic_api')\n",
-    "df_color = get_df_color(df_coord, f'{api_result_path}/traffic_api')\n",
+    "df_color = get_df_color(df_coord.copy(), df_coord, f'{api_result_path}/traffic_api')\n",
     "\n",
     "# Merge two above results\n",
     "df_traffic = get_df_traffic(df_speed, df_color)\n",
